apps/echo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: echo
